
Mon, Jun 16
-----------
-Added slideshow to Hardware projects
-Re-named div's to give more clarity as to what they contain

Commit 2
-Changed spacing to external resources
-started the about section
-fixed not having the about link link to the about page

Testing:
-Multiple projects in hardware projects, image slideshow is messed up


TODO:
fix the links in external resources section (convert to css grid)


Tue, Jun 17
-----------

Changed:
-Link style to align with design language(removed text decoration and colour)
-Removed unnessisary code from external resources section
-Added typing animation to the About section. Credit to: https://css-tricks.com/snippets/css/typewriter-effect/



Fixed:
-Image slideshow buttons not moving when resizing webpage
-External link spacing