@@ -84,7 +84,11 @@ div{
     <div class="hardware">
 
       <div class="description">
+      
+      
       <h1>Hardware</h1>
+      <a id="spinner-el" onclick="spinner(100)" href="javascript:void(0)">Click to Spin</a>
+      <script src="spinner.js"></script>
 
       <p>
         This server is currently being hosted on a Dell PowerEdge T420 with:
@@ -103,6 +107,8 @@ div{
       <div class="img">      
         <img src="/proj_Images/t420.jpg">
       </div>
+
+
 
 
     </div>
