@@ -1,7 +1,7 @@
 .page-title{
     margin-top: 50px;
     font-size: 50px;
-    margin-bottom: 80px;
+
 }
 
 
@@ -14,6 +14,10 @@
 .img img{
     height:700px;
     border-radius: 50px;
+    border: 5px;
+    border-style: solid;
+    box-shadow:10px 10px 10px rgba(0, 0, 0, 0.281);
+
 
 
 }
